--- a/SkillsStyleSheet.css
+++ b/SkillsStyleSheet.css
@@ -1,4 +1,10 @@
-﻿body {
+﻿html {
+    height: 100%;
+    margin: 0;
+    padding: 0;
+}
+
+body {
     background-color: #191b1f /*#0e171f #21262e*/;
     font-family: Arial;
 }
